--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -13,61 +13,68 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+       <ScrollView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:fillViewport="true">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+           <androidx.coordinatorlayout.widget.CoordinatorLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent">
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_marginVertical="10dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Top 3 Clientes"
-                    android:textAllCaps="true"
-                    android:textSize="18sp" />
+               <androidx.appcompat.widget.LinearLayoutCompat
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:orientation="vertical">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_topClients"
-                    android:layout_width="match_parent"
-                    android:layout_height="132dp"
-                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:setAdapter="@{clientViewModel.recyclerTopClientsAdapter}"/>
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_marginVertical="10dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Clientes"
-                    android:textAllCaps="true"
-                    android:textSize="18sp" />
+                   <com.google.android.material.textview.MaterialTextView
+                       android:layout_marginVertical="10dp"
+                       android:layout_marginHorizontal="16dp"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:text="Top 3 Clientes"
+                       android:textAllCaps="true"
+                       android:textSize="18sp" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_clients"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingBottom="60dp"
-                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:setAdapter="@{clientViewModel.recyclerClientsAdapter}"/>
+                   <androidx.recyclerview.widget.RecyclerView
+                       android:id="@+id/rv_topClients"
+                       android:layout_width="match_parent"
+                       android:layout_height="132dp"
+                       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                       app:setAdapter="@{clientViewModel.recyclerTopClientsAdapter}"/>
+                   <com.google.android.material.textview.MaterialTextView
+                       android:layout_marginVertical="10dp"
+                       android:layout_marginHorizontal="16dp"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:text="Clientes"
+                       android:textAllCaps="true"
+                       android:textSize="18sp" />
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                   <androidx.recyclerview.widget.RecyclerView
+                       android:id="@+id/rv_clients"
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:paddingBottom="60dp"
+                       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                       app:setAdapter="@{clientViewModel.recyclerClientsAdapter}"/>
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floating_action_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="72dp"
-                android:src="@drawable/ic_baseline_add_24"
-                android:contentDescription="Añadir Clientes"
-                android:onClick="@{() -> clientViewModel.onClickAddClients(context)}"/>
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+               </androidx.appcompat.widget.LinearLayoutCompat>
+
+               <com.google.android.material.floatingactionbutton.FloatingActionButton
+                   android:id="@+id/floating_action_button"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="bottom|end"
+                   android:layout_marginHorizontal="16dp"
+                   android:layout_marginBottom="72dp"
+                   android:src="@drawable/ic_baseline_add_24"
+                   android:contentDescription="Añadir Clientes"
+                   android:onClick="@{() -> clientViewModel.onClickAddClients(context)}"/>
+           </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+       </ScrollView>
     </FrameLayout>
 </layout>
