--- a/app/src/main/res/layout/template_client.xml
+++ b/app/src/main/res/layout/template_client.xml
@@ -24,22 +24,15 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:elevation="@dimen/cardview_default_elevation"
-                android:layout_margin="2dp"
-                android:layout_gravity="center"
-                app:cardCornerRadius="80dp">
+            <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            tools:src="@drawable/ic_baseline_person_24"
+            srcBitmap="@{clientViewModel.getClientAt(position).image}"
+            android:tint="@color/black"
+            android:scaleType="centerCrop" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    tools:src="@drawable/ic_baseline_person_24"
-                    srcBitmap="@{clientViewModel.getClientAt(position).image}"
-                    android:scaleType="centerCrop" />
-            </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
